GNU coreutils NEWS                                    -*- outline -*-

* Noteworthy changes in release ?.? (????-??-??) [?]

** New features

  du recognizes -d N as equivalent to --max-depth=N, for compatibility
  with FreeBSD.

  sort now accepts the --debug option, to highlight the part of the
  line significant in the sort, and warn about questionable options.

** Changes in behavior

  ls -l now uses the traditional three field time style rather than
  the wider two field numeric ISO style, in locales where a style has
  not been specified.  The new approach has nicer behavior in some
  locales, including English, which was judged to outweigh the disadvantage
  of generating less-predictable and often worse output in poorly-configured
  locales where there is an onus to specify appropriate non-default styles.
  [The old behavior was introduced in coreutils-6.0 and had been removed
   for English only using a different method since coreutils-8.1]

  sort -g now uses long doubles for greater range and precision.

  stat no longer accepts the --context (-Z) option.  Initially it was
  merely accepted and ignored, for compatibility.  Starting two years
  ago, with coreutils-7.0, its use evoked a warning.

  touch's --file option is no longer recognized.  Use --reference=F (-r)
  instead.  --file has not been documented for 15 years, and its use has
  elicited a warning since coreutils-7.1.

  truncate now supports setting file sizes relative to a reference file.
  Also errors are no longer suppressed for unsupported file types, and
  relative sizes are restricted to supported file types.


* Noteworthy changes in release 8.5 (2010-04-23) [stable]

** Bug fixes

  cp and mv once again support preserving extended attributes.
  [bug introduced in coreutils-8.4]

  cp now preserves "capabilities" when also preserving file ownership.

  ls --color once again honors the 'NORMAL' dircolors directive.
  [bug introduced in coreutils-6.11]
